[package]
name = "cli"
version = "0.1.0"
authors = ["makiri <kireew.martin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
failure = "0.1.5"
exitfailure = "0.5.1"
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }